# mo3d

./: .gitignore  Makefile  README.md  mojoproject.toml  pixi.toml  pyproject.toml  test_sdl.cpp
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  test.yml
doc/: mo3d-basic-architecture.excalidraw
src/: main-sdl2.mojo  main-sdl3.mojo  main.mojo
src/mo3d/: SDL.mojo  precision.mojo
src/mo3d/camera/: camera.mojo
src/mo3d/ecs/: component.mojo  component_store.mojo  entity.mojo
src/mo3d/geometry/: aabb.mojo  geometry.mojo  sphere.mojo
src/mo3d/gui/: pil.mojo
src/mo3d/material/: dielectric.mojo  diffuse_light.mojo  lambertian.mojo  material.mojo  metal.mojo
src/mo3d/math/: __init__.mojo  angle.mojo  color3.mojo  color4.mojo  interval.mojo  mat.mojo  mat4.mojo  point.mojo  point3.mojo  point4.mojo  ray.mojo  ray3.mojo  ray4.mojo  vec.mojo  vec3.mojo  vec4.mojo
src/mo3d/mlir/: my_bool.mojo
src/mo3d/numeric/: __init__.mojo  numeric.mojo  numeric_float32.mojo
src/mo3d/ray/: bvh_node.mojo  color4.mojo  hit_entity.mojo  hit_record.mojo  hittable.mojo  hittable_list.mojo  ray.mojo  sphere.mojo
src/mo3d/sample/: basic_three_sphere_scene.mojo  sphere_scene.mojo
src/mo3d/scene/: construct_bvh.mojo
src/mo3d/texture/: checker.mojo  solid.mojo  (+1 more)
test/mo3d/: test_aabb.mojo  test_bvh.mojo  test_ecs.mojo  test_gui.mojo  test_hittable.mojo  test_mat.mojo  test_material.mojo  test_mlir.mojo  test_numeric.mojo  test_ray.mojo  test_ray3.mojo  test_ray4.mojo  test_scene.mojo  test_sort.mojo  test_vec.mojo  test_vec3.mojo  test_vec4.mojo  test_window.mojo
(+6 files in other folders)
