[tool.poetry]
name = "mo3d"
version = "0.1.0"
description = "Prototype 3d library for Mojo Lang"
authors = ["Thomas Gale <mail@thomasjamesgale.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.9.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
